add nav bar on index file

--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
 
   <header>
     <div>
-
+      <img src="images/fav logo.png" alt="Shop Logo">
     </div>
   </header>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="shop.html">Shop</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+
 </body>
 
 </html>
