--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
   <header>
     <div>
-      <img src="images/fav logo.png" alt="Shop Logo">
+      <img src="images/web logo.png" alt="Shop Logo">
     </div>
+
+
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="shop.html">Shop</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
   </header>
-
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="shop.html">Shop</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-
 </body>
 
 </html>
