added section tag also add h1,p,and button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <div>
+    <div class="logo">
       <img src="images/web logo.png" alt="Shop Logo">
     </div>
 
@@ -24,6 +24,16 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
+  <section class="banner">
+    <img src="images/Banner.jpg" alt="Banner">
+    <div class="banner_text">
+      <h1>Stylish Sunglasses For Everyone</h1>
+      <p>Best Quality | Best Price</p>
+      <a href="shop.html" class="btn">Shop Now</a>
+    </div>
+  </section>
+
 </body>
 
 </html>
