added categories section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
     </div>
   </section>
 
+  <section class="categories">
+    <div class="cat">Men</div>
+    <div class="cat">Women</div>
+    <div class="cat">Kids</div>
+  </section>
+
 </body>
 
 </html>
