added footer section and Contact section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,31 @@
     <div class="cat">Kids</div>
   </section>
 
+  <footer>
+    <div class="footer_box">
+      <h3>About Us</h3>
+      <p>We sell premium sunglasses with modern style</p>
+    </div>
+
+    <div class="footer_box">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="shop.html">Shop</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </div>
+
+    <div class="footer_box">
+      <h3>Contact</h3>
+      <address>
+        Sylhet, Bangladesh
+        <br>
+        Phone: 01632589756
+      </address>
+    </div>
+  </footer>
+
 </body>
 
 </html>
