added header and linkup with css file

--- a/shop.html
+++ b/shop.html
@@ -5,12 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sunglass Shop</title>
-  <link rel="favicon" href="images/fav logo.png" type="image">
+  <link rel="icon" href="images/fav logo.png" type="image">
 </head>
 
 <body>
 
-
+  <header>
+    <h1>Sunglass Collection</h1>
+    <link rel="stylesheet" href="style.css">
+  </header>
 
 </body>
 
