added products on article section

--- a/shop.html
+++ b/shop.html
@@ -15,6 +15,59 @@
     <link rel="stylesheet" href="style.css">
   </header>
 
+  <section class="products">
+
+    <article class="product">
+      <img src="images/sunglass 5.jpg" alt="sunglass image">
+      <h3>Black Sunglass</h3>
+      <p>price: $3.99</p>
+      <button>Buy Now</button>
+    </article>
+
+    <article class="product">
+      <img src="images/sunglass 1.jpg" alt="sunglass image">
+      <h3>Classic Sunglass</h3>
+      <p>price: $4.99</p>
+      <button>Buy Now</button>
+    </article>
+
+    <article class="product">
+      <img src="images/sunglass 2.jpg" alt="sunglass image">
+      <h3>Sun Protector Sunglass</h3>
+      <p>price: $5.99</p>
+      <button>Buy Now</button>
+    </article>
+
+    <article class="product">
+      <img src="images/sunglass 3.jpg" alt="sunglass image">
+      <h3>Black Sunglass</h3>
+      <p>price: $2.99</p>
+      <button>Buy Now</button>
+    </article>
+
+    <article class="product">
+      <img src="images/sunglass 8.jpg" alt="sunglass image">
+      <h3>Kids Sunglass</h3>
+      <p>price: $4.49</p>
+      <button>Buy Now</button>
+    </article>
+
+    <article class="product">
+      <img src="images/sunglass 4.jpg" alt="sunglass image">
+      <h3>Sun Protector Sunglass</h3>
+      <p>price: $3.55</p>
+      <button>Buy Now</button>
+    </article>
+
+    <article class="product">
+      <img src="images/sunglass 6.jpg" alt="sunglass image">
+      <h3>Black Sunglass</h3>
+      <p>price: $5.49</p>
+      <button>Buy Now</button>
+    </article>
+
+  </section>
+
 </body>
 
 </html>
