set title named contact, type full contact section

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,24 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="images/fav logo.png" type="image/x-icon">
 </head>
+
 <body>
-  
+
+  <h>Contact Us</h1>
+
+    <form>
+      <label>Name:</label> <br>
+      <input type="text" placeholder="Enter Your Name"><br><br>
+
+      <label>Email:</label><br>
+      <input type="Email" placeholder="Enter Your Email"><br><br>
+
+      <label>Message:</label>
+      <textarea placeholder="Type Your Message"></textarea><br><br>
+
+      <button type="submit">Send</button>
+    </form>
+
 </body>
+
 </html>
